// MVP 데이터베이스 스키마
// Nike Run Club + 땅따먹기 게임
// Session이 Room에 병합됨

Project running_app {
  database_type: 'PostgreSQL'
  Note: '''
    # Running App MVP
    GPS 기반 러닝 땅따먹기 게임
    
    ## 핵심 개념
    - Room = 하나의 게임 (Session 개념 병합)
    - Participant = 방 참가자 (팀 A/B, 페인트볼, 기록 상태)
    - RunningRecord = 러닝 기록 (시작~종료 버튼 사이)
  '''
}

// ==================== 사용자 ====================
Table users {
  id uuid [pk, default: `uuid_generate_v4()`]
  username varchar(150) [unique, not null]
  email varchar(254) [unique, not null]
  password varchar(128) [not null]
  is_active boolean [default: true]
  is_staff boolean [default: false]
  date_joined timestamp [default: `now()`]
  created_at timestamp [default: `now()`]
  updated_at timestamp [default: `now()`]
  
  // 랭킹 시스템
  rating int [default: 1000, note: 'ELO 레이팅 (기본값: 1000)']
  games_played int [default: 0, note: '총 게임 수']
  games_won int [default: 0, note: '승리 횟수']
  games_lost int [default: 0, note: '패배 횟수']
  games_draw int [default: 0, note: '무승부 횟수']
  mvp_count int [default: 0, note: 'MVP 횟수']
  highest_rating int [default: 1000, note: '최고 레이팅']
  
  indexes {
    rating [name: 'idx_users_rating']
  }
  
  Note: '''
    사용자 (프로필: 이메일, 가입날짜)
    - 랭킹 시스템: ELO 레이팅 기반
    - 게임 종료 시 팀 승패에 따라 레이팅 변동
    - MVP(최다 점령자)는 추가 보너스 점수 획득
  '''
}

// ==================== 게임 구역 ====================
Table game_areas {
  id uuid [pk, default: `uuid_generate_v4()`]
  name varchar(200) [not null, note: '구역 이름 (예: 한강공원)']
  city varchar(100) [not null, note: '도시 (예: 서울)']
  description text [null, note: '구역 설명']
  
  // 게임 영역 설정
  bounds json [not null, note: 'GeoJSON polygon']
  h3_resolution int [default: 8, note: 'H3 해상도 (기본: 8)']
  
  // 활성화 여부
  is_active boolean [default: true, note: '활성화 여부']
  
  created_at timestamp [default: `now()`]
  updated_at timestamp [default: `now()`]
  
  indexes {
    (city, is_active) [name: 'idx_game_areas_city_active']
  }
  
  Note: '''
    게임 구역 (미리 지정된 구역)
    - 개발자가 미리 정의한 게임 가능 지역
    - is_active=false인 구역은 선택 불가
  '''
}

// ==================== 방 (게임) ====================
Table rooms {
  id uuid [pk, default: `uuid_generate_v4()`]
  name varchar(200) [not null, note: '방 이름']
  creator_id uuid [ref: > users.id, not null, note: '방장']
  
  // 참가자 설정
  total_participants int [not null, default: 4, note: '총 인원수 (짝수)']
  
  // 일정
  start_date timestamp [not null, note: '게임 시작 일시']
  end_date timestamp [not null, note: '게임 종료 일시']
  
  // 게임 영역 (미리 지정된 구역 선택)
  game_area_id uuid [ref: > game_areas.id, not null, note: '선택한 게임 구역']
  
  // Hex 점령 상태
  current_hex_ownerships json [default: '{}', note: '{h3_id: {team, user_id, claimed_at}}']
  
  // 상태
  status varchar(20) [default: 'ready', note: 'ready | active | finished']
  invite_code varchar(20) [unique, not null, note: '초대 코드']
  
  // 결과
  mvp_id uuid [ref: > users.id, null, note: 'MVP 사용자']
  winner_team varchar(1) [null, note: '승리 팀 (A | B)']
  
  created_at timestamp [default: `now()`]
  updated_at timestamp [default: `now()`]
  
  indexes {
    (creator_id, status) [name: 'idx_rooms_creator_status']
    (status, start_date) [name: 'idx_rooms_status_start']
    invite_code [unique, name: 'idx_rooms_invite_code']
    game_area_id [name: 'idx_rooms_game_area']
  }
  
  Note: '''
    게임 방
    - status: ready(준비) → active(진행중) → finished(완료)
    - total_participants는 짝수 (A팀 절반 + B팀 절반)
    - game_area_id로 미리 지정된 구역을 선택
    - 방장이 시작 버튼을 누르면 start_date 이후 active로 변경
    - end_date가 지나면 finished로 변경, 승리팀 결정
  '''
}

// ==================== 참가자 ====================
Table participants {
  id uuid [pk, default: `uuid_generate_v4()`]
  room_id uuid [ref: > rooms.id, not null]
  user_id uuid [ref: > users.id, not null]
  
  // 팀 & 역할
  team varchar(1) [not null, default: 'A', note: 'A | B']
  is_host boolean [default: false, note: '방장 여부']
  
  // 기록 상태
  is_recording boolean [default: false, note: '현재 기록 중인지']
  
  // 페인트볼
  paintball_count int [default: 0, note: '페인트볼 개수']
  super_paintball_count int [default: 0, note: '슈퍼 페인트볼 개수']
  paintball_gauge int [default: 0, note: '게이지 (0-100)']
  
  // 출석
  consecutive_attendance_days int [default: 0, note: '연속 출석일']
  last_attendance_date date [null, note: '마지막 출석일']
  
  // 위치
  last_lat float [null, note: '마지막 위도']
  last_lng float [null, note: '마지막 경도']
  last_h3_id varchar(20) [null, note: '마지막 H3 ID']
  last_location_at timestamp [null]
  
  // 게임 결과 통계 (게임 종료 시 저장)
  hexes_claimed int [default: 0, note: '점령한 땅 수']
  rating_change int [default: 0, note: '레이팅 변동']
  is_mvp boolean [default: false, note: 'MVP 여부']
  
  joined_at timestamp [default: `now()`]
  
  indexes {
    (room_id, user_id) [unique, name: 'idx_participants_room_user']
    (room_id, team) [name: 'idx_participants_room_team']
    (room_id, is_host) [name: 'idx_participants_room_host']
    (room_id, is_recording) [name: 'idx_participants_room_recording']
  }
  
  Note: '''
    방 참가자
    - team: A팀 또는 B팀
    - is_host: 방장 (방당 1명)
    - is_recording: 시작 버튼을 눌러 기록 중인 상태
    - 게이지가 100이 차면 페인트볼 +1
    - 페인트볼 3개 ↔ 슈퍼 페인트볼 1개 교환 가능
    - 게임 종료 시 hexes_claimed, rating_change, is_mvp 저장
  '''
}

// ==================== 러닝 기록 ====================
Table running_records {
  id uuid [pk, default: `uuid_generate_v4()`]
  user_id uuid [ref: > users.id, not null]
  room_id uuid [ref: > rooms.id, null, note: '관련 방 (없을 수도 있음)']
  participant_id uuid [ref: > participants.id, null]
  
  // 기록 데이터
  duration_seconds int [default: 0, note: '달린 시간 (초)']
  distance_meters float [default: 0, note: '달린 거리 (m)']
  avg_pace_seconds_per_km float [null, note: '평균 페이스 (초/km)']
  
  // 시간
  started_at timestamp [not null, note: '시작 버튼 누른 시간']
  ended_at timestamp [null, note: '종료 버튼 누른 시간']
  
  created_at timestamp [default: `now()`]
  
  indexes {
    (user_id, started_at) [name: 'idx_records_user_started']
    (room_id, user_id) [name: 'idx_records_room_user']
  }
  
  Note: '''
    러닝 기록
    - 시작 버튼 ~ 종료 버튼 사이가 하나의 기록
    - 시간, 거리, 페이스 저장
    - 년/월/주 단위로 통계 집계 가능
  '''
}

// ==================== 친구 ====================
Table friendships {
  id uuid [pk, default: `uuid_generate_v4()`]
  requester_id uuid [ref: > users.id, not null]
  addressee_id uuid [ref: > users.id, not null]
  status varchar(20) [default: 'pending', note: 'pending | accepted']
  created_at timestamp [default: `now()`]
  updated_at timestamp [default: `now()`]
  
  indexes {
    (requester_id, addressee_id) [unique, name: 'idx_friendships_pair']
    (requester_id, status) [name: 'idx_friendships_requester_status']
    (addressee_id, status) [name: 'idx_friendships_addressee_status']
  }
  
  Note: '친구 관계 (닉네임 검색으로 초대 가능)'
}

// ==================== 우편함 (친구/방 초대) ====================
Table mailbox {
  id uuid [pk, default: `uuid_generate_v4()`]
  sender_id uuid [ref: > users.id, not null, note: '보낸 사람']
  receiver_id uuid [ref: > users.id, not null, note: '받는 사람']
  mail_type varchar(20) [default: 'room_invite', note: 'friend_request | room_invite']
  room_id uuid [ref: > rooms.id, null, note: '초대하는 방 (room_invite만)']
  friendship_id uuid [ref: > friendships.id, null, note: '친구 요청 (friend_request만)']
  status varchar(20) [default: 'unread', note: 'unread | read | accepted | rejected']
  created_at timestamp [default: `now()`]
  read_at timestamp [null]
  
  indexes {
    (receiver_id, status) [name: 'idx_mailbox_receiver_status']
    (receiver_id, mail_type) [name: 'idx_mailbox_receiver_type']
    (receiver_id, created_at) [name: 'idx_mailbox_receiver_created']
  }
  
  Note: '''
    우편함 - 친구 요청/방 초대
    - 친구 요청은 친구가 아닌 상태에서 보냄
    - 방에 있는 친구가 초대 가능
    - 초대받은 방이 ready 상태이고 팀 정원이 안 찼으면 참가 가능
  '''
}
